2005-10-03  Tristan Van Berkom  <tvb@gnome.org>

	* todo.html: Adjusted information regarding Glade 3, notably; added
	  a reference to the GNOME download directory.

2005-04-28  Damon Chaplin  <damon@gnome.org>

	* apps.html: fixed gPowershot url.

2005-03-26  Damon Chaplin  <damon@gnome.org>

	* apps.html: added gPowershot.

2005-03-25  Damon Chaplin  <damon@gnome.org>

	* *.html: new website design from Joao Victor.

2005-01-07  Damon Chaplin  <damon@gnome.org>

	* apps.html: moved xcave from Glade 1 to Glade 2 section.

2004-12-21  Damon Chaplin  <damon@gnome.org>

	* history.html: 
	* index.html: 
	* download.html: added info on 2.6.8 release.

	* apps.html: added keyTouch.

2004-12-14  Damon Chaplin  <damon@gnome.org>

	* history.html: 
	* index.html: 
	* download.html: added info on releases up to 2.6.7.

	* apps.html: added Warehouse Manager.

2004-12-02  Damon Chaplin  <damon@gnome.org>

	* apps.html: added configure-trackpoint.

	* glade-2.0.dtd: updated to new version from libglade.

2004-07-24  Damon Chaplin  <damon@gnome.org>

	* apps.html: added gFLAMEd.

2004-07-12  Damon Chaplin  <damon@gnome.org>

	* apps.html: added RealmForge GDK.

	* index.html: 
	* download.html: 
	* history.html: added 2.6.0 info.

2004-04-14  Damon Chaplin  <damon@gnome.org>

	* links.html: checked all the links and tidied up.

	* lists.html: removed references to glade-announce. We don't use it
	any more.

2004-04-12  Damon Chaplin  <damon@gnome.org>

	* index.html: fixed date.

2004-04-11  Damon Chaplin  <damon@gnome.org>

	* apps.html: added GNOME-IOR.

2004-03-23  Damon Chaplin  <damon@gnome.org>

	* download.html:
	* history.html: 
	* index.html: announce 2.5.0.

2004-03-10  Damon Chaplin  <damon@gnome.org>

	* apps.html: added PHOEBE.

2004-03-04  Damon Chaplin  <damon@gnome.org>

	* apps.html: added DTraq.

	* index.html: updated Olivier Karquel's URL of the French info.

2004-02-26  Damon Chaplin  <damon@gnome.org>
