@@ -76,32 +76,38 @@ Glade-3 comes with standard GTK+ widgets only; Gnomeui and Gnome-db widgets will
 provided separately.
 </li><li>The various Glade Tools (palette, editor, etc) are implemented as widgets,
 this should allow easier integration in IDEs like Anjuta or Scaffold. This will
-also make it alot easier change the Glade UI, even if for the first milestone we plan
-to simply clone the current UI.
+also make it alot easier change the Glade UI.
 </li></ul>
 
+
+<h2>Glade-3 status and planning</h2>
+<p>
+Glade-3 is only a few features and bugfixes away from covering the full feature
+set of Glade-2, the plan is to get these last fixes in and make a stable "3.0" 
+release so that we can start integrating all the interesting non-widget objects 
+relevent to the UI. Since this is going to require another vihicle than current 
+versions of libglade the codebase may change dramaticly; so that is the first
+thing I want to address.
+</p>
 <h2>Glade-3 wants you</h2>
 <p>
-Glade-3 is quite stable, but unfortunately at the moment the developement is not as 
-fast paced as we would like and there are still some large unfinished portions of
-the code base left to be written. 
-Given that the Glade user base is mostly made of developers it would be great if you 
-could help with it: work on Glade-3 may be a great learning experience since the 
-difficulty of things you can work on range from basic GTK+ GUI programming to the 
-deep secrets of the GObject system.
+Given that the Glade user base is mostly made of developers it would be great
+if you could help with it: work on Glade-3 may be a great learning experience 
+since the difficulty of things you can work on range from basic GTK+ GUI 
+programming to the deep secrets of the GObject system.
 </p><p>
 If you don't have the time to help with programming; testing and reporting bugs would
 still be greatly appreciated.
 </p><p>
 For a list of things that need doing, check out the 
-<a href="http://bugzilla.gnome.org/buglist.cgi?product=glade3&amp;bug_status=UNCONFIRMED&amp;bug_status=NEW&amp;bug_status=ASSIGNED&amp;bug_status=REOPENED&amp;email1=&amp;emailtype1=substring&amp;emailassigned_to1=1&amp;email2=&amp;emailtype2=substring&amp;emailreporter2=1&amp;changedin=&amp;chfieldfrom=&amp;chfieldto=Now&amp;chfieldvalue=&amp;short_desc=&amp;short_desc_type=substring&amp;long_desc=&amp;long_desc_type=substring&amp;bug_file_loc=&amp;bug_file_loc_type=substring&amp;status_whiteboard=&amp;status_whiteboard_type=substring&amp;keywords=&amp;keywords_type=anywords&amp;op_sys_details=&amp;op_sys_details_type=substring&amp;version_details=&amp;version_details_type=substring&amp;cmdtype=doit&amp;order=Reuse+same+sort+as+last+time&amp;form_name=query"> bugs in bugzilla</a>.
+<a href="http://bugzilla.gnome.org/buglist.cgi?query=product%3Aglade3">bugs in bugzilla</a>.
 </p>
 
 <h2>Download</h2>
 <p>
-You can always get the latest development snapshot 
-<a href="http://ftp.gnome.org/pub/GNOME/sources/glade-3/"> here</a> and build it with
-the usual:
+You can always get the latest
+<a href="http://ftp.gnome.org/pub/GNOME/sources/glade-3/">development snapshot</a>
+and build it with the usual:
 </p><p>
 <tt>
 ./configure<br/>
@@ -121,12 +127,20 @@ Then to build enter the glade3 directory and run the usual:
 make<br/>
 make install<br/>
 </tt>
+</p><p>
+Glade-3 now also has
+<a href="http://gnome.org/~tvb/glade_api/">documentation</a> to help you add your
+own widget implementations to the builder at runtime, integrate Glade-3 into your
+own IDE tool, or ofcourse; improve Glade-3 itself ;-)
 </p>
 
 <h2>Feedback</h2>
 <p>
-For bug reports, comments, questions and hopefully patches you can write to the
-<a href="http://glade.gnome.org/lists.html">glade-devel</a> list. If you prefer you can also fill bugreports in <a href="http://bugzilla.gnome.org/">bugzilla</a> (glade3 product).
+For bug reports, comments, feature requests, questions and patches you can write to the
+<a href="http://glade.gnome.org/lists.html">glade-devel</a> list. 
+</p><p>
+You can also file
+bugreports in <a href="http://bugzilla.gnome.org/enter_bug.cgi?product=glade3">bugzilla</a>.
 </p>
 </div>
 
